fix overflow cheese info view

--- a/src/App.css
+++ b/src/App.css
@@ -15,17 +15,24 @@
   /* display: inline-block; */
   text-decoration: none;
   background-color: rgba(255, 248, 220, 0.651);
-  width: 100vw;
+  max-width: 100vw;
 }
 
 /*/ ///////////////////////////// /*/
 /*///////////// Header /////////////*/
 /*/ ///////////////////////////// /*/
 
-.img {
+.header {
   background: url(https://media.istockphoto.com/photos/assorted-cheeses-fruits-nuts-platter-picture-id1052365970?k=6&m=1052365970&s=612x612&w=0&h=CPDnwjD2DMNQa7eSmEdRgL8omJSnQ_QKQv0AJ4_1Q_I=);
   background-size: cover;
+  color: white;
   height: 100vh;
+}
+
+.header > h1 {
+  font-family: "Cormorant", serif;
+  font-size: 8vw;
+  text-shadow: 1px 0 10px rgb(0, 0, 0);
 }
 
 /*/ ///////////////////////////////// /*/
@@ -43,12 +50,19 @@
 }
 
 .home-view > h1 {
+  font-family: "Cormorant", serif;
+  font-size: 8vw;
+  text-align: center;
   text-shadow: 1px 0 10px rgb(0, 0, 0);
 }
 .home-view > h2 {
+  font-family: "Libre Baskerville", serif;
+  font-size: 2.5vw;
   text-shadow: 1px 0 10px rgb(0, 0, 0);
 }
-.home-view > p {
+.home-view > label {
+  font-family: "Cormorant", serif;
+  font-size: 2vw;
   text-shadow: 1px 0 10px rgb(0, 0, 0);
 }
 
@@ -59,18 +73,28 @@
 .cheese-info {
   background: rgb(80, 30, 30);
   background-size: cover;
-  height: 100vh;
+  height: 100%;
+  width: 100%;
+}
+
+.cheese-gridder {
+  display: grid;
+  margin: 20px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 20px;
+  /* background-color: blue; */
+  max-width: 100vw;
+}
+
+.app-info-container {
+  display: grid;
+  place-items: center;
+  background-color: rgb(116, 101, 83);
 }
 
 .info-container {
   background-color: rgb(202, 149, 149);
-  width: 24%;
-}
-
-.app-info-container {
-  display: flex;
-  flex-direction: column;
-  background-color: rgb(116, 101, 83);
+  width: 100%;
 }
 
 .inner-info-container {
